# Load-GPU-Map

./: CMakeLists.txt  README.md
include/: dataType.cuh  loadGpu.cuh
src/: loadGpu.cu
